--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-
+    <p>“The freedom of Mankind does not lie in the fact that can do what we want, but that we do not have to do that which we do not want.”</p>
+    <p>— Jean-Jacques Rousseau</p>
   </body>
 </html>
