--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <p>“The freedom of Mankind does not lie in the fact that can do what we want, but that we do not have to do that which we do not want.”</p>
-    <p>— Jean-Jacques Rousseau</p>
+    <p id="a">“The freedom of Mankind does not lie in the fact that can do what we want, but that we do not have to do that which we do not want.”</p>
+    <p id="b">— Jean-Jacques Rousseau</p>
   </body>
 </html>
